--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@automapper/classes": "^7.1.1",
+    "@automapper/core": "^7.1.1",
+    "@automapper/nestjs": "^7.1.1",
     "@nestjs/common": "^8.2.3",
     "@nestjs/core": "^8.2.3",
     "@nestjs/mongoose": "^9.0.1",
