--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^6.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "tslog": "^3.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
